--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,6 +30,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'College freshmen -- United States -- Life skills guides'
 - !lcc 'LB'
+- GITenberg
 title: "The College Freshman's Don't Book\r\nin the interests of freshmen at large,\
   \ especially those whose remaining at large uninstructed & unguided appears a worry\
   \ and a menace to college & university society these remarks and hints are set forth\
